Update solution for JWT authentication and testing
- Updated Visual Studio version and added "ProgrammingClubApi.Spec" project.
- Configured JWT authentication in `Program.cs` and updated related settings in `appsettings.json`.
- Added new error messages in `ErrorMessagesEnum.cs`.
- Created feature file and step definitions for member retrieval tests.
- Implemented `AuthenticationController` for user management with ASP.NET Core Identity.
- Added `ProgrammingClubAuthDataContext` and created migrations for authentication schema.
- Defined DTOs for login and registration requests and implemented `ITokenService` for JWT token creation.

--- a/ProgrammingClubApi.Spec/appsettings.json
+++ b/ProgrammingClubApi.Spec/appsettings.json
@@ -10,9 +10,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "This is a very long secret key that should be kept safe and secure.",
-    "Issuer": "http://localhost:7202",
-    "Audience": "http://localhost:7202",
-    "ExpirationMinutes": 60
+    "Key": "My secret key for auth.My secret key for auth.",
+    "Issuer": "https://localhost:7202",
+    "Audience": "https://localhost:7202"
   }
 }
+
