--- a/ProgrammingClub/appsettings.json
+++ b/ProgrammingClub/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ProgrammingClub;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Server=localhost;Database=ProgrammingClub;Trusted_Connection=True;Encrypt=False",
+    "DefaultAuthConnection": "Server=localhost;Database=ProgrammingClubAuth;Trusted_Connection=True;Encrypt=False"
   },
   "AllowedHosts": "*",
   "Jwt": {
